[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Init.gd" type="Script" id=1]
[ext_resource path="res://Meshes/House.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Meshes/Gravestone1.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://Meshes/Gravestone2.mesh" type="ArrayMesh" id=6]
[ext_resource path="res://new_environment.tres" type="Environment" id=7]
[ext_resource path="res://Utilities/CameraArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://NPCs/Girl.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/DialogueParser.tscn" type="PackedScene" id=10]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -4.7776, 2.703, -3.8157, -4.7776, 0.8977, 3.863, -4.7776, 0.8977, -3.8157, -4.7776, 2.703, -3.8157, -4.7776, 2.703, 3.863, -4.7776, 0.8977, 3.863, 4.8208, 2.703, 3.863, 4.8208, 0.8977, -3.8157, 4.8208, 0.8977, 3.863, 4.8208, 2.703, 3.863, 4.8208, 2.703, -3.8157, 4.8208, 0.8977, -3.8157, 2.2801, 2.703, -3.8157, -2.2368, 0.8977, -3.8157, 2.2801, 0.8977, -3.8157, 2.2801, 2.703, -3.8157, -2.2368, 2.703, -3.8157, -2.2368, 0.8977, -3.8157, -2.3529, 3, -4, -5, 3, -4, -2.3529, 4.9597, -4, -2.3529, 4.9597, -4, -2.3529, 3, 4, -2.3529, 3, -4, -2.3529, 4.9597, -4, -2.3529, 4.9597, 4, -2.3529, 3, 4, 2.3529, 4.9597, 4, 2.3529, 3, -4, 2.3529, 3, 4, 2.3529, 4.9597, 4, 2.3529, 4.9597, -4, 2.3529, 3, -4, 2.3529, 4.9597, -4, -2.3529, 3, -4, 2.3529, 3, -4, 2.3529, 4.9597, -4, -2.3529, 4.9597, -4, -2.3529, 3, -4, 4.8208, 2.703, -3.8157, 4.5761, 0.8977, -3.8157, 4.8208, 0.8977, -3.8157, 4.8208, 2.703, -3.8157, 2.2801, 0.8977, -3.8157, 4.5761, 0.8977, -3.8157, 4.8208, 2.703, -3.8157, 2.2801, 2.703, -3.8157, 2.2801, 0.8977, -3.8157, -2.3529, 3, 4, -5, 3, -4, -2.3529, 3, -4, -2.3529, 3, 4, -5, 3, 4, -5, 3, -4, 3.1856, 0.8977, 3.863, 4.8208, -0.9886, 3.863, 3.1856, -0.9886, 3.863, 3.1856, 0.8977, 3.863, 4.8208, 0.8977, 3.863, 4.8208, -0.9886, 3.863, 5, 3, 4, 2.3529, 3, -4, 5, 3, -4, 5, 3, 4, 2.3529, 3, 4, 2.3529, 3, -4, -2.2368, 2.703, -3.8157, -4.7776, 0.8977, -3.8157, -2.2368, 0.8977, -3.8157, -2.2368, 2.703, -3.8157, -4.7776, 2.703, -3.8157, -4.7776, 0.8977, -3.8157, -2.378, 0.8977, 3.7519, -2.378, -0.9886, 3.863, -2.378, -0.9886, 3.7519, -2.378, 0.8977, 3.7519, -2.378, 0.8977, 3.863, -2.378, -0.9886, 3.863, -2.3529, 4.9597, 4, 2.3529, 3, 4, -2.3529, 3, 4, -2.3529, 4.9597, 4, 2.3529, 4.9597, 4, 2.3529, 3, 4, -2.3529, 3, 4, -5, 3, 4, -2.3529, 4.9597, 4, 4.5872, 3.3056, 4, 2.3529, 3, 4, 5, 3, 4, 4.5872, 3.3056, 4, 2.8555, 4.5876, 4, 2.3529, 3, 4, 2.8555, 4.5876, 4, 2.3529, 4.9597, 4, 2.3529, 3, 4, 2.3529, 4.9597, -4, 2.8555, 4.5876, -4, 2.3529, 3, -4, 2.8555, 4.5876, -4, 5, 3, -4, 2.3529, 3, -4, 2.8555, 4.5876, -4, 4.5872, 3.3056, -4, 5, 3, -4, 3.1856, -0.9886, 3.863, 4.8208, -2.8301, 3.863, 3.1817, -2.8301, 3.863, 3.1856, -0.9886, 3.863, 4.8208, -0.9886, 3.863, 4.8208, -2.8301, 3.863, -2.2368, 0.8977, -3.8157, -4.7776, -0.9886, -3.8157, -2.2368, -0.9886, -3.8157, -2.2368, 0.8977, -3.8157, -4.7776, 0.8977, -3.8157, -4.7776, -0.9886, -3.8157, -4.7776, 2.703, 3.863, -4.411, 0.8977, 3.863, -4.7776, 0.8977, 3.863, -4.7776, 2.703, 3.863, -2.378, 0.8977, 3.863, -4.411, 0.8977, 3.863, -4.7776, 2.703, 3.863, 0.4575, 0.8977, 3.863, -2.378, 0.8977, 3.863, -4.7776, 2.703, 3.863, 0.9629, 0.8977, 3.863, 0.4575, 0.8977, 3.863, -4.7776, 2.703, 3.863, 3.1856, 0.8977, 3.863, 0.9629, 0.8977, 3.863, -4.7776, 2.703, 3.863, 4.8208, 0.8977, 3.863, 3.1856, 0.8977, 3.863, -4.7776, 2.703, 3.863, 4.8208, 2.703, 3.863, 4.8208, 0.8977, 3.863, -2.2368, 2.703, 3.863, 4.8208, 2.703, 3.863, -4.7776, 2.703, 3.863, 2.2801, 2.703, 3.863, 4.8208, 2.703, 3.863, -2.2368, 2.703, 3.863, 4.8208, 0.8977, -3.8157, 4.5761, -0.9886, -3.8157, 4.8208, -0.9886, -3.8157, 4.8208, 0.8977, -3.8157, 4.5761, 0.8977, -3.8157, 4.5761, -0.9886, -3.8157, -4.411, 0.8977, 3.863, -2.378, 0.8977, 3.7519, -4.411, 0.8977, 3.7519, -4.411, 0.8977, 3.863, -2.378, 0.8977, 3.863, -2.378, 0.8977, 3.7519, 2.2801, 0.8977, -3.8157, -2.2368, -0.9886, -3.8157, 2.2801, -0.9886, -3.8157, 2.2801, 0.8977, -3.8157, -2.2368, 0.8977, -3.8157, -2.2368, -0.9886, -3.8157, 4.8208, 0.8977, 3.863, 4.8208, -0.9886, -3.8157, 4.8208, -0.9886, 3.863, 4.8208, 0.8977, 3.863, 4.8208, 0.8977, -3.8157, 4.8208, -0.9886, -3.8157, -4.7776, 0.8977, -3.8157, -4.7776, -0.9886, 3.863, -4.7776, -0.9886, -3.8157, -4.7776, 0.8977, -3.8157, -4.7776, 0.8977, 3.863, -4.7776, -0.9886, 3.863, -4.7776, -0.9886, -3.8157, -4.7776, -2.8301, 3.863, -4.7776, -2.8301, -3.8157, -4.7776, -0.9886, -3.8157, -4.7776, -0.9886, 3.863, -4.7776, -2.8301, 3.863, 4.8208, -0.9886, 3.863, 4.8208, -2.8301, -3.8157, 4.8208, -2.8301, 3.863, 4.8208, -0.9886, 3.863, 4.8208, -0.9886, -3.8157, 4.8208, -2.8301, -3.8157, 2.2801, -0.9886, -3.8157, -2.2368, -2.8301, -3.8157, 2.2801, -2.8301, -3.8157, 2.2801, -0.9886, -3.8157, -2.2368, -0.9886, -3.8157, -2.2368, -2.8301, -3.8157, 0.4575, 0.8977, 3.863, 0.9629, -0.9886, 3.863, 0.4575, -0.9886, 3.863, 0.4575, 0.8977, 3.863, 0.9629, 0.8977, 3.863, 0.9629, -0.9886, 3.863, 4.8208, -0.9886, -3.8157, 4.5761, -2.8301, -3.8157, 4.8208, -2.8301, -3.8157, 4.8208, -0.9886, -3.8157, 4.5761, -0.9886, -3.8157, 4.5761, -2.8301, -3.8157, -2.2368, -0.9886, -3.8157, -4.7776, -2.8301, -3.8157, -2.2368, -2.8301, -3.8157, -2.2368, -0.9886, -3.8157, -4.7776, -0.9886, -3.8157, -4.7776, -2.8301, -3.8157, -2.378, -0.9886, 3.863, -4.411, -0.9886, 3.7519, -2.378, -0.9886, 3.7519, -2.378, -0.9886, 3.863, -4.411, -0.9886, 3.863, -4.411, -0.9886, 3.7519, -4.7776, 0.8977, 3.863, -4.411, -0.9886, 3.863, -4.7776, -0.9886, 3.863, -4.7776, 0.8977, 3.863, -4.411, 0.8977, 3.863, -4.411, -0.9886, 3.863, -4.411, 0.8977, 3.863, -4.411, -0.9886, 3.7519, -4.411, -0.9886, 3.863, -4.411, 0.8977, 3.863, -4.411, 0.8977, 3.7519, -4.411, -0.9886, 3.7519, -2.378, 0.8977, 3.863, 0.4575, -0.9886, 3.863, -2.378, -0.9886, 3.863, -2.378, 0.8977, 3.863, 0.4575, 0.8977, 3.863, 0.4575, -0.9886, 3.863, -4.7776, -2.8301, 3.863, 0.9629, -0.9886, 3.863, 0.9701, -2.8408, 3.863, -4.7776, -0.9886, 3.863, 0.9629, -0.9886, 3.863, -4.7776, -2.8301, 3.863, -4.411, -0.9886, 3.863, 0.9629, -0.9886, 3.863, -4.7776, -0.9886, 3.863, -2.378, -0.9886, 3.863, 0.9629, -0.9886, 3.863, -4.411, -0.9886, 3.863, 0.4575, -0.9886, 3.863, 0.9629, -0.9886, 3.863, -2.378, -0.9886, 3.863, 0.9629, -0.9886, 3.863, 0.9701, -2.8408, 3.656, 0.9701, -2.8408, 3.863, 0.9629, -0.9886, 3.863, 0.9629, -0.9886, 3.656, 0.9701, -2.8408, 3.656, 3.1856, 0.8977, 3.656, 3.1856, -0.9886, 3.863, 3.1856, -0.9886, 3.656, 3.1856, 0.8977, 3.656, 3.1856, 0.8977, 3.863, 3.1856, -0.9886, 3.863, 0.9629, 0.8977, 3.863, 0.9629, -0.9886, 3.656, 0.9629, -0.9886, 3.863, 0.9629, 0.8977, 3.863, 0.9629, 0.8977, 3.656, 0.9629, -0.9886, 3.656, 0.9629, 0.8977, 3.863, 3.1856, 0.8977, 3.656, 0.9629, 0.8977, 3.656, 0.9629, 0.8977, 3.863, 3.1856, 0.8977, 3.863, 3.1856, 0.8977, 3.656, 3.1856, -0.9886, 3.656, 3.1817, -2.8301, 3.863, 3.1817, -2.8301, 3.656, 3.1856, -0.9886, 3.656, 3.1856, -0.9886, 3.863, 3.1817, -2.8301, 3.863, 4.5761, -0.9886, -3.8157, 2.2801, -2.8301, -3.8157, 4.5761, -2.8301, -3.8157, 4.5761, -0.9886, -3.8157, 2.2801, -0.9886, -3.8157, 2.2801, -2.8301, -3.8157, 2.2801, 0.8977, -3.6562, 4.5761, 0.8977, -3.8157, 2.2801, 0.8977, -3.8157, 2.2801, 0.8977, -3.6562, 4.5761, 0.8977, -3.6562, 4.5761, 0.8977, -3.8157, 2.2801, 0.8977, -3.6562, 2.2801, -0.9886, -3.8157, 2.2801, -0.9886, -3.6562, 2.2801, 0.8977, -3.6562, 2.2801, 0.8977, -3.8157, 2.2801, -0.9886, -3.8157, 4.5761, 0.8977, -3.8157, 4.5761, -0.9886, -3.6562, 4.5761, -0.9886, -3.8157, 4.5761, 0.8977, -3.8157, 4.5761, 0.8977, -3.6562, 4.5761, -0.9886, -3.6562, 4.5761, -0.9886, -3.6562, 2.2801, -0.9886, -3.8157, 4.5761, -0.9886, -3.8157, 4.5761, -0.9886, -3.6562, 2.2801, -0.9886, -3.6562, 2.2801, -0.9886, -3.8157, 2.3529, 3, -4, -2.2368, 2.703, -3.8157, 2.2801, 2.703, -3.8157, 2.3529, 3, -4, -2.3529, 3, -4, -2.2368, 2.703, -3.8157, -2.3529, 3, 4, 2.2801, 2.703, 3.863, -2.2368, 2.703, 3.863, -2.3529, 3, 4, 2.3529, 3, 4, 2.2801, 2.703, 3.863, 5, 3, -4, 2.2801, 2.703, -3.8157, 4.8208, 2.703, -3.8157, 5, 3, -4, 2.3529, 3, -4, 2.2801, 2.703, -3.8157, -2.3529, 3, -4, -4.7776, 2.703, -3.8157, -2.2368, 2.703, -3.8157, -2.3529, 3, -4, -5, 3, -4, -4.7776, 2.703, -3.8157, -5, 3, 4, -2.2368, 2.703, 3.863, -4.7776, 2.703, 3.863, -5, 3, 4, -2.3529, 3, 4, -2.2368, 2.703, 3.863, 2.3529, 3, 4, 4.8208, 2.703, 3.863, 2.2801, 2.703, 3.863, 2.3529, 3, 4, 5, 3, 4, 4.8208, 2.703, 3.863, 2.8555, 4.5876, 4, 2.8555, 4.5876, 4, 2.8555, 4.5876, 4, 2.3529, 4.9597, 4, 2.3529, 4.9597, 4, 2.3529, 4.9597, 4, -5, 3, 4, -5, 3, 4, -5, 3, 4, 2.3529, 4.9597, -4, 2.8555, 4.5876, -3.3543, 2.8555, 4.5876, -4, 2.3529, 4.9597, -4, 2.8555, 4.5876, -1.0244, 2.8555, 4.5876, -3.3543, 2.3529, 4.9597, -4, 2.8555, 4.5876, 4, 2.8555, 4.5876, -1.0244, 2.3529, 4.9597, -4, 2.3529, 4.9597, 4, 2.8555, 4.5876, 4, -2.3529, 4.9597, 4, -5, 3, -4, -5, 3, 4, -2.3529, 4.9597, 4, -2.3529, 4.9597, -4, -5, 3, -4, 2.8555, 4.5876, -1.0244, 4.5872, 3.3056, 4, 4.5872, 3.3056, -1.0244, 2.8555, 4.5876, -1.0244, 2.8555, 4.5876, 4, 4.5872, 3.3056, 4, 4.5872, 3.3056, -4, 5, 3, 4, 5, 3, -4, 4.5872, 3.3056, -4, 4.5872, 3.3056, 4, 5, 3, 4, 4.5872, 3.3056, -3.3543, 4.5872, 3.3056, 4, 4.5872, 3.3056, -4, 4.5872, 3.3056, -1.0244, 4.5872, 3.3056, 4, 4.5872, 3.3056, -3.3543, 2.8555, 4.5876, -4, 4.5872, 3.3056, -3.3543, 4.5872, 3.3056, -4, 2.8555, 4.5876, -4, 2.8555, 4.5876, -3.3543, 4.5872, 3.3056, -3.3543, -5, 3, -4, -4.7776, 2.703, 3.863, -4.7776, 2.703, -3.8157, -5, 3, -4, -5, 3, 4, -4.7776, 2.703, 3.863, 5, 3, 4, 4.8208, 2.703, -3.8157, 4.8208, 2.703, 3.863, 5, 3, 4, 5, 3, -4, 4.8208, 2.703, -3.8157, -2.3529, 4.9597, 4, -2.3529, 4.9597, 4, -2.3529, 4.9597, 4, 2.8555, 4.5876, 4, 4.5872, 3.3056, 4.2, 4.5872, 3.3056, 4, 2.8555, 4.5876, 4, 2.8555, 4.5876, 4.2, 4.5872, 3.3056, 4.2, -2.3529, 4.9597, 4.2, -5, 3, 4, -5, 3, 4.2, -2.3529, 4.9597, 4.2, -2.3529, 4.9597, 4, -5, 3, 4, 2.3529, 4.9597, 4, 2.8555, 4.5876, 4.2, 2.8555, 4.5876, 4, 2.3529, 4.9597, 4, 2.3529, 4.9597, 4.2, 2.8555, 4.5876, 4.2, 2.3529, 4.9597, -4.2, 2.8555, 4.5876, -4, 2.8555, 4.5876, -4.2, 2.3529, 4.9597, -4.2, 2.3529, 4.9597, -4, 2.8555, 4.5876, -4, -2.3529, 4.9597, -4, -5, 3, -4.2, -5, 3, -4, -2.3529, 4.9597, -4, -2.3529, 4.9597, -4.2, -5, 3, -4.2, 4.5872, 3.3056, -4.2, 5, 3, -4, 5, 3, -4.2, 4.5872, 3.3056, -4.2, 4.5872, 3.3056, -4, 5, 3, -4, 2.8555, 4.5876, -4.2, 4.5872, 3.3056, -4, 4.5872, 3.3056, -4.2, 2.8555, 4.5876, -4.2, 2.8555, 4.5876, -4, 4.5872, 3.3056, -4, 4.5872, 3.3056, 4, 5, 3, 4.2, 5, 3, 4, 4.5872, 3.3056, 4, 4.5872, 3.3056, 4.2, 5, 3, 4.2, 5, 3, 4, 4.8208, 2.703, 4.063, 4.8208, 2.703, 3.863, 5, 3, 4, 5, 3, 4.2, 4.8208, 2.703, 4.063, -5, 3, 4.2, -4.7776, 2.703, 3.863, -4.7776, 2.703, 4.063, -5, 3, 4.2, -5, 3, 4, -4.7776, 2.703, 3.863, 5, 3, -4, 4.8208, 2.703, -4.0157, 4.8208, 2.703, -3.8157, 5, 3, -4, 5, 3, -4.2, 4.8208, 2.703, -4.0157, -5, 3, -4.2, -4.7776, 2.703, -3.8157, -4.7776, 2.703, -4.0157, -5, 3, -4.2, -5, 3, -4, -4.7776, 2.703, -3.8157, -2.2368, -2.9058, 3.863, 2.2801, -2.9058, -3.8157, -2.2368, -2.9058, -3.8157, -2.2368, -2.9058, 3.863, 2.2801, -2.9058, 3.863, 2.2801, -2.9058, -3.8157, 0.9704, -2.9058, 3.863, 2.2801, -2.9058, 3.863, -2.2368, -2.9058, 3.863, 2.2801, -2.9058, 3.863, 4.5761, -2.9058, -3.8157, 2.2801, -2.9058, -3.8157, 2.2801, -2.9058, 3.863, 4.8208, -2.9058, -3.8157, 4.5761, -2.9058, -3.8157, 2.2801, -2.9058, 3.863, 4.8208, -2.9058, 3.863, 4.8208, -2.9058, -3.8157, 3.1815, -2.9058, 3.863, 4.8208, -2.9058, 3.863, 2.2801, -2.9058, 3.863, -4.7776, -2.9058, 3.863, -2.2368, -2.9058, -3.8157, -4.7776, -2.9058, -3.8157, -4.7776, -2.9058, 3.863, -2.2368, -2.9058, 3.863, -2.2368, -2.9058, -3.8157, 0.9701, -2.8408, 3.863, 2.2801, -2.9058, 3.863, 0.9704, -2.9058, 3.863, 0.9701, -2.8408, 3.863, 3.1815, -2.9058, 3.863, 2.2801, -2.9058, 3.863, 0.9701, -2.8408, 3.863, 3.1817, -2.8301, 3.863, 3.1815, -2.9058, 3.863, -2.2368, -2.8301, -3.8157, -4.7776, -2.9058, -3.8157, -2.2368, -2.9058, -3.8157, -2.2368, -2.8301, -3.8157, -4.7776, -2.8301, -3.8157, -4.7776, -2.9058, -3.8157, 4.8208, -2.8301, -3.8157, 4.5761, -2.9058, -3.8157, 4.8208, -2.9058, -3.8157, 4.8208, -2.8301, -3.8157, 4.5761, -2.8301, -3.8157, 4.5761, -2.9058, -3.8157, 2.2801, -2.8301, -3.8157, -2.2368, -2.9058, -3.8157, 2.2801, -2.9058, -3.8157, 2.2801, -2.8301, -3.8157, -2.2368, -2.8301, -3.8157, -2.2368, -2.9058, -3.8157, 4.8208, -2.8301, 3.863, 4.8208, -2.9058, -3.8157, 4.8208, -2.9058, 3.863, 4.8208, -2.8301, 3.863, 4.8208, -2.8301, -3.8157, 4.8208, -2.9058, -3.8157, -4.7776, -2.8301, -3.8157, -4.7776, -2.9058, 3.863, -4.7776, -2.9058, -3.8157, -4.7776, -2.8301, -3.8157, -4.7776, -2.8301, 3.863, -4.7776, -2.9058, 3.863, 3.1817, -2.8301, 3.863, 4.8208, -2.9058, 3.863, 3.1815, -2.9058, 3.863, 3.1817, -2.8301, 3.863, 4.8208, -2.8301, 3.863, 4.8208, -2.9058, 3.863, 3.1817, -2.8301, 3.656, 0.9701, -2.8408, 3.863, 0.9701, -2.8408, 3.656, 3.1817, -2.8301, 3.656, 3.1817, -2.8301, 3.863, 0.9701, -2.8408, 3.863, 4.5761, -2.8301, -3.8157, 2.2801, -2.9058, -3.8157, 4.5761, -2.9058, -3.8157, 4.5761, -2.8301, -3.8157, 2.2801, -2.8301, -3.8157, 2.2801, -2.9058, -3.8157, -4.7776, -2.8301, 3.863, -2.2368, -2.9058, 3.863, -4.7776, -2.9058, 3.863, -4.7776, -2.8301, 3.863, 0.9704, -2.9058, 3.863, -2.2368, -2.9058, 3.863, -4.7776, -2.8301, 3.863, 0.9701, -2.8408, 3.863, 0.9704, -2.9058, 3.863, -4.411, 0.8977, 3.7519, -2.378, -0.9886, 3.7519, -4.411, -0.9886, 3.7519, -4.411, 0.8977, 3.7519, -2.378, 0.8977, 3.7519, -2.378, -0.9886, 3.7519, 4.5761, 0.8977, -3.6562, 2.2801, -0.9886, -3.6562, 4.5761, -0.9886, -3.6562, 4.5761, 0.8977, -3.6562, 2.2801, 0.8977, -3.6562, 2.2801, -0.9886, -3.6562, 0.9629, -0.9886, 3.656, 3.1817, -2.8301, 3.656, 0.9701, -2.8408, 3.656, 0.9629, -0.9886, 3.656, 3.1856, -0.9886, 3.656, 3.1817, -2.8301, 3.656, 0.9629, 0.8977, 3.656, 3.1856, -0.9886, 3.656, 0.9629, -0.9886, 3.656, 0.9629, 0.8977, 3.656, 3.1856, 0.8977, 3.656, 3.1856, -0.9886, 3.656, 2.3529, 4.9597, 4, -2.3529, 4.9597, -4, 2.3529, 4.9597, -4, 2.3529, 4.9597, 4, -2.3529, 4.9597, 4, -2.3529, 4.9597, -4, 4.5872, 5.6303, -3.3543, 4.5872, 3.3056, -1.0244, 4.5872, 3.3056, -3.3543, 4.5872, 5.6303, -3.3543, 4.5872, 5.6303, -1.0244, 4.5872, 3.3056, -1.0244, 4.3255, 5.6303, -3.0926, 3.1172, 4.5057, -3.0926, 4.3255, 4.5057, -3.0926, 4.3255, 5.6303, -3.0926, 3.1172, 5.6303, -3.0926, 3.1172, 4.5057, -3.0926, 4.5872, 5.6303, -1.0244, 2.8555, 4.5876, -1.0244, 4.5872, 3.3056, -1.0244, 4.5872, 5.6303, -1.0244, 2.8555, 5.6303, -1.0244, 2.8555, 4.5876, -1.0244, 2.8555, 4.5876, -3.3543, 4.5872, 5.6303, -3.3543, 4.5872, 3.3056, -3.3543, 2.8555, 5.6303, -3.3543, 4.5872, 5.6303, -3.3543, 2.8555, 4.5876, -3.3543, 2.8555, 5.6303, -1.0244, 2.8555, 4.5876, -3.3543, 2.8555, 4.5876, -1.0244, 2.8555, 5.6303, -1.0244, 2.8555, 5.6303, -3.3543, 2.8555, 4.5876, -3.3543, 2.8555, 5.6303, -1.0244, 4.3255, 5.6303, -1.2861, 3.1172, 5.6303, -1.2861, 2.8555, 5.6303, -1.0244, 4.5872, 5.6303, -1.0244, 4.3255, 5.6303, -1.2861, 2.8555, 5.6303, -1.0244, 3.1172, 5.6303, -3.0926, 2.8555, 5.6303, -3.3543, 2.8555, 5.6303, -1.0244, 3.1172, 5.6303, -1.2861, 3.1172, 5.6303, -3.0926, 4.3255, 5.6303, -3.0926, 4.5872, 5.6303, -1.0244, 4.5872, 5.6303, -3.3543, 4.3255, 5.6303, -1.2861, 4.5872, 5.6303, -1.0244, 4.3255, 5.6303, -3.0926, 3.1172, 5.6303, -3.0926, 4.5872, 5.6303, -3.3543, 2.8555, 5.6303, -3.3543, 3.1172, 5.6303, -3.0926, 4.3255, 5.6303, -3.0926, 4.5872, 5.6303, -3.3543, 3.1172, 4.5057, -1.2861, 4.3255, 4.5057, -3.0926, 3.1172, 4.5057, -3.0926, 3.1172, 4.5057, -1.2861, 4.3255, 4.5057, -1.2861, 4.3255, 4.5057, -3.0926, 3.1172, 5.6303, -3.0926, 3.1172, 4.5057, -1.2861, 3.1172, 4.5057, -3.0926, 3.1172, 5.6303, -3.0926, 3.1172, 5.6303, -1.2861, 3.1172, 4.5057, -1.2861, 4.3255, 5.6303, -1.2861, 4.3255, 4.5057, -3.0926, 4.3255, 4.5057, -1.2861, 4.3255, 5.6303, -1.2861, 4.3255, 5.6303, -3.0926, 4.3255, 4.5057, -3.0926, 3.1172, 5.6303, -1.2861, 4.3255, 4.5057, -1.2861, 3.1172, 4.5057, -1.2861, 3.1172, 5.6303, -1.2861, 4.3255, 5.6303, -1.2861, 4.3255, 4.5057, -1.2861, -2.3529, 4.9597, 4.2, 2.3529, 4.9597, 4, -2.3529, 4.9597, 4, -2.3529, 4.9597, 4.2, 2.3529, 4.9597, 4.2, 2.3529, 4.9597, 4, -2.3529, 4.9597, -4, 2.3529, 4.9597, -4.2, -2.3529, 4.9597, -4.2, -2.3529, 4.9597, -4, 2.3529, 4.9597, -4, 2.3529, 4.9597, -4.2 )

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.498039, 0.6, 1, 1 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="ConvexPolygonShape" id=8]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 5.57183, 7.61878, 2.88006 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 24.6153, 7.61878, 12.771 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 2.23137, 12.1413, 6.25317 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1.87966, 12.1413, 3.72231 )

[node name="Graveyard" type="Spatial"]
script = ExtResource( 1 )

[node name="HouseParent" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.76248, 3.07664, -13 )

[node name="House" type="MeshInstance" parent="HouseParent"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.30938, -0.108288, 1 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null

[node name="StaticBody" type="StaticBody" parent="HouseParent/House"]

[node name="CollisionShape" type="CollisionShape" parent="HouseParent/House/StaticBody"]
shape = SubResource( 1 )

[node name="DoorParent" type="Spatial" parent="HouseParent"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.414982, -0.575762, -0.949021 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.274742, -0.555529, 0.784796, 0.0982156, 0.82815, 0.551834, -0.956489, -0.0745326, 0.282089, 30.7334, 14.8666, 25.01 )
visible = false
light_energy = 0.52
shadow_enabled = true

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( -0.730381, 0.436627, -0.525263, 0.0982156, 0.82815, 0.551834, 0.675942, 0.35146, -0.647749, -36.242, -8.60884, -59.8427 )
light_energy = 0.4
shadow_enabled = true
shadow_bias = -0.22

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 9.86691, 1.49434, -0.26846 )

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Wall" type="MeshInstance" parent="."]
transform = Transform( -20, -1.50996e-07, 6.60024e-14, 0, -4.37114e-08, -10, 3.01992e-06, -1, 4.37114e-07, 0, 1, 20 )
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall"]

[node name="CollisionShape" type="CollisionShape" parent="Wall/StaticBody"]
shape = SubResource( 6 )

[node name="Wall2" type="MeshInstance" parent="."]
transform = Transform( 20, 5.21541e-08, -2.84217e-14, 0, -4.37114e-08, -10, -9.53674e-07, 1, -4.37114e-07, 0, 1, -20 )
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall2"]

[node name="CollisionShape" type="CollisionShape" parent="Wall2/StaticBody"]
shape = SubResource( 7 )

[node name="Wall3" type="MeshInstance" parent="."]
transform = Transform( 7.94465e-08, -1, 4.37114e-07, 0, -4.37114e-08, -10, 20, 8.44268e-09, -9.31485e-15, 13.233, 1, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall3"]

[node name="CollisionShape" type="CollisionShape" parent="Wall3/StaticBody"]
shape = SubResource( 8 )

[node name="Wall4" type="MeshInstance" parent="."]
transform = Transform( -1.8279e-06, 1, -4.37114e-07, 0, -4.37114e-08, -10, -20, -9.58655e-08, 4.75286e-14, -20, 1, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall4"]

[node name="CollisionShape" type="CollisionShape" parent="Wall4/StaticBody"]
shape = SubResource( 9 )

[node name="Graves" type="Spatial" parent="."]

[node name="Grave" type="MeshInstance" parent="Graves"]
transform = Transform( -4.32288e-08, -0.148184, 0.197792, 0.147991, 0.97807, 0.0293105, -0.988989, 0.146358, 0.00438599, -3, 0.677401, 16 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave11" type="MeshInstance" parent="Graves"]
transform = Transform( -4.37114e-08, 0, 0.2, -0.123514, 0.992343, -1.07979e-09, -0.992343, -0.123514, -8.67534e-09, -3, 0.672693, -6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave5" type="MeshInstance" parent="Graves"]
transform = Transform( 0.219526, -0.301343, 0.18558, -0.118601, 0.935805, 0.0663938, -0.968371, -0.182926, 0.0339388, 5, 0.629282, 16 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave13" type="MeshInstance" parent="Graves"]
transform = Transform( -4.34031e-08, 0.11855, 0.19859, 0.0907637, 0.98885, -0.0236121, -0.995872, 0.0901237, -0.00215201, 5, 0.782144, -6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave8" type="MeshInstance" parent="Graves"]
transform = Transform( -4.37114e-08, 0, 0.2, 0.0849597, 0.996384, 7.42741e-10, -0.996384, 0.0849597, -8.71067e-09, -10, 0.765076, 16 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave2" type="MeshInstance" parent="Graves"]
transform = Transform( -0.0610131, 0, 0.199627, 0, 1, 0, -0.998137, 0, -0.0122026, -3, 1, 11 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave10" type="MeshInstance" parent="Graves"]
transform = Transform( -4.3541e-08, 0.0882194, 0.19922, 3.85619e-09, 0.996101, -0.0176439, -1, 0, -8.74228e-09, -3, 0.819072, -11 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave4" type="MeshInstance" parent="Graves"]
transform = Transform( -4.37114e-08, 0, 0.2, 0, 1, 0, -1, 0, -8.74228e-09, 5, 1.33605, 11 )
mesh = ExtResource( 6 )
material/0 = null

[node name="Grave12" type="MeshInstance" parent="Graves"]
transform = Transform( -4.37114e-08, 0, 0.2, -0.150606, 0.988594, -1.31664e-09, -0.988594, -0.150606, -8.64256e-09, 5, 0.815285, -11 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave7" type="MeshInstance" parent="Graves"]
transform = Transform( 0.0736328, 0, 0.199457, 0, 1, 0, -0.997285, 0, 0.0147266, -10, 1, 11 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave3" type="MeshInstance" parent="Graves"]
transform = Transform( 0.379762, -0.0795672, 0.184331, -0.0792134, 0.989838, 0.0236185, -0.921686, -0.117855, 0.07392, -3, 0.736066, 6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave14" type="MeshInstance" parent="Graves"]
transform = Transform( -0.0697689, -0.348131, 0.186969, 0.1837, 0.91662, 0.0710106, -0.980503, 0.196503, -8.57183e-09, -3, 0.521774, -16 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave6" type="MeshInstance" parent="Graves"]
transform = Transform( 0.100937, -0.187966, 0.195395, 0.0193169, 0.982176, 0.0373941, -0.994705, 0, 0.0205537, 5, 0.834003, 6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave15" type="MeshInstance" parent="Graves"]
transform = Transform( 0.120598, 0, 0.19854, 0, 1, 0, -0.992701, 0, 0.0241197, 5, 0.855217, -16 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Grave9" type="MeshInstance" parent="Graves"]
transform = Transform( -4.37114e-08, 0, 0.2, -0.000932008, 1, -8.14782e-12, -1, -0.000932008, -8.74227e-09, -10, 0.894224, 6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 7 )

[node name="CameraAreas" type="Spatial" parent="."]

[node name="CameraArea" parent="CameraAreas" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8739, 2.34542, -23.243 )

[node name="CollisionShape" parent="CameraAreas/CameraArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22919, 0, 4.18474 )
shape = SubResource( 10 )

[node name="Camera" parent="CameraAreas/CameraArea" index="1"]
transform = Transform( -0.602038, 0, 0.798467, 0, 1, 0, -0.798467, 0, -0.602038, 6.79528, 1.32435, -0.73727 )
fov = 80.0

[node name="CameraArea2" parent="CameraAreas" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 13.6047, 3.46503, -12.2432 )

[node name="CollisionShape" parent="CameraAreas/CameraArea2" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6779, 0, -1.90735e-06 )
shape = SubResource( 11 )

[node name="Camera" parent="CameraAreas/CameraArea2" index="1"]
transform = Transform( 1, 0, 0, 0, 0.819152, 0.573577, 0, -0.573576, 0.819152, -11.7435, 18.1158, 4.41095 )
current = true
fov = 80.0

[node name="CameraArea3" parent="CameraAreas" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9962, 0, -10.3157 )

[node name="CollisionShape" parent="CameraAreas/CameraArea3" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.77328, 0, 11.5902 )

[node name="Camera" parent="CameraAreas/CameraArea3" index="1"]
transform = Transform( 0.837041, -0.14161, 0.528497, 0, 0.965926, 0.258819, -0.54714, -0.216642, 0.80852, 8.10983, 2.73688, 14.1887 )

[node name="CameraArea4" parent="CameraAreas" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.757, 0, -10.474 )

[node name="CollisionShape" parent="CameraAreas/CameraArea4" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.872511, 0, 1.29409 )
shape = SubResource( 12 )

[node name="Camera" parent="CameraAreas/CameraArea4" index="1"]
transform = Transform( -3.93827e-08, 0.433878, -0.900972, 1.89654e-08, 0.900972, 0.433878, 1, 1.77636e-15, -4.37114e-08, -8.17246, 10.8506, -2.52547 )

[node name="CameraArea5" parent="CameraAreas" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54598, 0, -10.474 )

[node name="CollisionShape" parent="CameraAreas/CameraArea5" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.50001, 0.448653, 4.15914 )
shape = SubResource( 13 )
disabled = true

[node name="Camera" parent="CameraAreas/CameraArea5" index="1"]
transform = Transform( 0.293809, 0.324186, 0.899211, 1.48249e-08, 0.940731, -0.339155, -0.955864, 0.0996467, 0.276395, 2.40215, 0.455885, 6.19263 )

[node name="Girl" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -7.38807, 0.637983, 1.0093 )

[node name="DialogueParser" parent="." instance=ExtResource( 10 )]

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.02076, 1.2395, -14.3854 )

[node name="Girl2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.228, 0.704776, -6.514 )

[node name="Girl3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.44158, 1.20291, 10.0439 )

[editable path="CameraAreas/CameraArea"]

[editable path="CameraAreas/CameraArea2"]

[editable path="CameraAreas/CameraArea3"]

[editable path="CameraAreas/CameraArea4"]

[editable path="CameraAreas/CameraArea5"]
